Completed html to pdf base64 logic
